# pex_example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-build.txt  requirements.txt
binaries/: env.pex  fastapi_app.pex  uvicorn.pex
fastapi_app/: pyproject.toml
