[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_app"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
readme = "README.md"
description = "A small example package"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi==0.103.1",
  "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = ["app/"]
